# ZKP-in-FML

./: .gitignore  LICENSE  README.md  client.py  count_line_of_code.py  dataset.py  deployment_metrics.csv  main.py  model.py  poc_avg_metric.csv  pyproject.toml  requirements.txt  run.sh  run_poc.sh  server.py  strategy.py  utils.py  zk_avg_metric.csv
clientcontributionfl/: __init__.py  client_app.py  contribution.zok  custom_partitioner.py  dataset.py  image.zok  main.py  model.py  server_app.py  server_utils.py  smart_contract_manager.py  strategy.py  zero_knowledge.py  zk_strategy.py  zokrates.py  zokrates_proof.py
clientcontributionfl/client_strategy/: __init__.py  contribution.zok  contribution_client.py  fedavg_client.py  fedprox_client.py  merkle_proof_client.py  poc_client.py  zkavg_client.py
clientcontributionfl/merkle_root_proof/: __init__.py  merkle_tree.py  merkle_tree_build_time_results.csv  merkle_tree_verification.zok  test.py
clientcontributionfl/merkle_root_proof/hash/: __init__.py  constants.py  poseidon.py
clientcontributionfl/merkle_root_proof/utils/: hash_utils.py
clientcontributionfl/models/: __init__.py  simple_cnn.py
clientcontributionfl/notebook/: Synthetic_example.ipynb
clientcontributionfl/plots/results/: history_S=ContAvg_R=10_P=iid_and_non_iid_SecAgg=Off_x=2_iid_ratio=0.7.npy  history_S=ContFedAvg_R=10_D=dirichlet_SecAgg=On.npy  history_S=ContFedAvg_R=10_D=dirichlet_SecAgg=On_alpha=0.03.npy  history_S=ContFedAvg_R=1_D=dirichlet.npy  history_S=FedAvg_R=10_D=dirichlet_SecAgg=On.npy  history_S=FedAvg_R=10_D=dirichlet_SecAgg=On_alpha=0.03.npy  history_S=FedAvg_R=10_P=iid_and_non_iid_SecAgg=Off_x=2_iid_ratio=0.3.npy  history_S=FedAvg_R=2_D=iid_and_non_iid_SecAgg=Off_alpha=0.5.npy  history_S=FedAvg_R=30_D=dirichlet_SecAgg=Off_alpha=0.03.npy  history_S=FedAvg_R=30_D=dirichlet_SecAgg=Off_alpha=0.1.npy  history_S=FedAvg_R=30_D=dirichlet_SecAgg=Off_alpha=0.5.npy  history_S=FedAvg_R=30_D=dirichlet_SecAgg=Off_alpha=1.0.npy  history_S=FedAvg_R=30_D=dirichlet_SecAgg=Off_alpha=2.0.npy  history_S=ZkAvg_R=10_P=iid_and_non_iid_SecAgg=Off_x=2_iid_ratio=0.3.npy  history_S=ZkAvg_R=10_P=iid_and_non_iid_SecAgg=Off_x=2_iid_ratio=0.7.npy  history_S=ZkAvg_R=2_D=iid_and_non_iid_SecAgg=Off_alpha=0.5.npy
clientcontributionfl/plots/results/scores/: dirichlet.npy
clientcontributionfl/server_strategy/: __init__.py  clustering_strategy.py  contribution_strategy.py  merkle_proof_strategy.py  poc_server.py  poc_strategy.py  poc_workflow.py  zk_strategy.py
clientcontributionfl/utils/: __init__.py  file_utils.py  plot_util.py  score.py  train_utils.py
config/: base.yaml
plots/results/: history_S=ContFedAvg_C=5_R=25_D=dirichlet.npy  history_S=FedAvg_C=5_R=25_D=dirichlet.npy
plots/scores/: dirichlet.npy  exponential.npy  iid.npy  linear.npy  pathological.npy  square.npy
results/first_round/: cont_avg_metric.csv
results/merkle_tree_proofs/: merkle_tree_experiments.csv
results/simulation/: history_S=ContAvg_R=10_P=iid_and_non_iid_x=2_iid_ratio=0.7_dishonest.npy  history_S=FedAvg_R=10_P=iid_and_non_iid_x=2_iid_ratio=0.7_dishonest.npy  history_S=ZkAvg_R=10_P=iid_and_non_iid_x=2_iid_ratio=0.7_dishonest.npy
results/simulation/R=100_P=iid_and_non_iid_D=CIFAR10_x=2_iid_ratio=0.7_dishonest_bal=True_iid_df=0.5/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoCZk.npy  history_S=ZkAvg.npy
results/simulation/R=10_P=iid_and_non_iid_x=2_iid_ratio=0.7_dishonest/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoC.npy  history_S=ZkAvg.npy
results/simulation/R=2_P=iid_and_non_iid_x=2_iid_ratio=0.7_dishonest/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=CIFAR10_x=2_iid_ratio=0.3_dishonest_bal=True_iid_df=0.5/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoCZk.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=CIFAR10_x=2_iid_ratio=0.5_dishonest_bal=True_iid_df=0.5/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoCZk.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=1_iid_ratio=0.3_bal=False_iid_df=0.1/: history_S=PoC.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=1_iid_ratio=0.5_bal=False_iid_df=0.3/: history_S=PoC.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=1_iid_ratio=0.7_bal=False_iid_df=0.5/: history_S=PoCZk.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.3/: history_S=ContAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.3_bal=True/: history_S=FedAvg.npy  history_S=PoC.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.3_dishonest/: history_S=ContAvg.npy  history_S=FedAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.3_dishonest_bal=True/: history_S=PoC.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.5_bal=True/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoC.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.5_dishonest/: history_S=FedAvg.npy  history_S=PoC.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.5_dishonest_bal=True/: history_S=ContAvg.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.7_bal=False_iid_df=0.5/: history_S=PoC.npy  history_S=PoCZk.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.7_bal=True/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoCZk.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.7_dishonest/: history_S=PoC.npy  history_S=ZkAvg.npy
results/simulation/R=40_P=iid_and_non_iid_D=FMNIST_x=2_iid_ratio=0.7_dishonest_bal=True/: history_S=ContAvg.npy  history_S=FedAvg.npy
results/simulation/R=50_P=iid_and_non_iid_x=2_iid_ratio=0.7_dishonest/: history_S=ContAvg.npy  history_S=FedAvg.npy  history_S=PoC.npy  history_S=ZkAvg.npy
utils/: plot_util.py  score.py
(+206 files in other folders)
